featuer: Add correct controls. Add the fullscreen control

--- a/android-exoplayer/src/main/res/values/strings.xml
+++ b/android-exoplayer/src/main/res/values/strings.xml
@@ -15,5 +15,6 @@
     <string name="play_video">Play video</string>
     <string name="rewind_video">Rewind video</string>
     <string name="forward_video">Forward video</string>
+    <string name="fullscreen">Fullscreen</string>
 
 </resources>
