feature: Add the ability to show change the right screen icon. Allow for the live videos to correctly update the player controls

--- a/android-exoplayer/src/main/res/values/strings.xml
+++ b/android-exoplayer/src/main/res/values/strings.xml
@@ -17,5 +17,6 @@
     <string name="forward_video">Forward video</string>
     <string name="fullscreen">Fullscreen</string>
     <string name="preview_image">Preview image</string>
+    <string name="live">LIVE</string>
 
 </resources>
